Add NFC QS Tile
More cleanup on QS tiles
* Make strings & states more consistent to AOSP tiles
* Remove unused/duplicate strings
* Fix copyright headers

SystemUI: update quick tile animations and icons
Use new AnimationIcons and ResourceIcon classes added with 5.1

Fix tile disapearing randomly

PureNexus edits:
*properly forward port to 7.0
*add is available boolean hasSystemFeature(PackageManager.FEATURE_NFC)

Change-Id: Id053594e9ad4284fb43e4389a6acc69ddefd68b4
Signed-off-by: Josue Rivera <prbassplayer@gmail.com>

--- a/packages/SlimSystemUI/res/values/config.xml
+++ b/packages/SlimSystemUI/res/values/config.xml
@@ -24,7 +24,7 @@
     <!-- Default value how much apps show the app screenshot on recents view entry -->
     <integer name="expanded_items_default">2</integer>
 
-    <string name="quick_settings_tiles_slim" translatable="false">caffeine,ime,screenshot,sync,usb_tether</string>
+    <string name="quick_settings_tiles_slim" translatable="false">caffeine,ime,screenshot,nfc,sync,usb_tether</string>
 
 </resources>
 
