slim: port SlimSeekBarPreference to Slim6
patchset: fix id paths

patchset: create package context for org.slim.framework

patchset: add missing import

patchset: use material light theme

patchset: for themeability, don't hardcode style in preference layout

patchset: styles.xml, not slim_styles.xml

Change-Id: I417314cb71e9ee8f4b0326c71b13b34a0a4a6232

--- a/res/res/values/attrs.xml
+++ b/res/res/values/attrs.xml
@@ -42,4 +42,9 @@
         <attr name="useDefaultController" format="boolean" />
     </declare-styleable>
 
+    <!-- Base attributes available to SlimSeekBarPreference. -->
+    <declare-styleable name="SlimSeekBarPreference">
+        <!-- No added attributes at this time -->
+    </declare-styleable>
+
 </resources>
