--- a/res/res/values/ids.xml
+++ b/res/res/values/ids.xml
@@ -14,4 +14,8 @@
 <resources>
     <item type="id" name="drag_handle" />
     <item type="id" name="list_item_icon" />
+    <!-- @hide -->
+    <item type="id" name="monitor_box" />
+    <!-- @hide -->
+    <item type="id" name="seek_bar" />
 </resources>
