Slim: (2/3) Add slim navbar
patchset: add stuff to symbols.xml

Change-Id: I9b5f4d9e231216671ccda009accbd29fd5145640

--- a/res/res/values/symbols.xml
+++ b/res/res/values/symbols.xml
@@ -31,6 +31,7 @@
     <java-symbol type="string" name="help" />
     <java-symbol type="string" name="attention" />
     <java-symbol type="string" name="reset_message" />
+    <java-symbol type="string" name="reset" />
 
     <!-- DSLV -->
     <java-symbol type="string" name="help_label" />
