--- a/res/res/values/public.xml
+++ b/res/res/values/public.xml
@@ -56,9 +56,17 @@
 
   <public type="string" name="reset" id="0x02040002" />
 
+  <!-- DSLV -->
+  <public type="string" name="shortcut_action_disable_message" id="0x02040003" />
+  <public type="string" name="shortcut_action_doubletap" id="0x02040004" />
+  <public type="string" name="shortcut_action_select_action_doubletap" id="0x02040005" />
+
   <!-- dimen (start with 0x02050000) -->
 
   <!-- color (start with 0x02060000) -->
+
+  <!-- DSLV -->
+  <public type="color" name="dslv_float_background_color" id="0x02060000" />
 
   <!-- array (start with 0x02070000) -->
   <public type="array" name="icon_color_mode_entries" id="0x02070000" />
@@ -67,6 +75,8 @@
   <!-- drawable (start with 0x02080000) -->
   <public type="drawable" name="ic_settings_reset" id="0x02080000" />
 
+  <public type="drawable" name="ic_grabber" id="0x02080001" />
+
   <!-- layout (start with 0x02090000) -->
 
   <!--Slim Slider layout @hide -->
@@ -74,6 +84,10 @@
 
   <!-- ColorPickerDialog @hide -->
   <public type="layout" name="dialog_color_picker" id="0x02090001" />
+
+  <!-- DSLV -->
+  <public type="layout" name="action_list_view_item" id="0x02090002" />
+  <public type="layout" name="action_list_view_main" id="0x02090003" />
 
   <!-- anim (start with 0x020a0000) -->
 
