--- a/res/res/layout/action_list_view_main.xml
+++ b/res/res/layout/action_list_view_main.xml
@@ -17,22 +17,23 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res-auto"
+    android:theme="@android:style/Theme.Material.Light"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:id="@+id/fragment_container"
+        android:id="@id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </LinearLayout>
     <View
-        android:id="@+id/divider"
+        android:id="@id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:visibility="gone"
         android:background="@android:color/darker_gray"/>
     <TextView
-        android:id="@+id/disable_message"
+        android:id="@id/disable_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dip"
