--- a/res/res/layout/dialog_color_picker.xml
+++ b/res/res/layout/dialog_color_picker.xml
@@ -34,7 +34,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hex"
+            android:text="@org.slim.framework:string/hex"
             android:textSize="20sp"
             android:layout_marginRight="10dp" />
 
