--- a/res/res/values/symbols.xml
+++ b/res/res/values/symbols.xml
@@ -54,8 +54,110 @@
     <java-symbol type="string" name="shortcut_action_none" />
     <java-symbol type="string" name="shortcut_action_longpress" />
 
-    <!-- Drawables -->
+    <!-- Drawables (PLEASE KEEP ALPHABETIZED) -->
+    <java-symbol type="drawable" name="ic_action_set" />
+    <java-symbol type="drawable" name="ic_grabber" />
     <java-symbol type="drawable" name="ic_menu_add" />
+    <java-symbol type="drawable" name="ic_settings_reset" />
+    <java-symbol type="drawable" name="ic_shortcut_action_auto_rotate" />
+    <java-symbol type="drawable" name="ic_shortcut_action_back" />
+    <java-symbol type="drawable" name="ic_shortcut_action_back_ime" />
+    <java-symbol type="drawable" name="ic_shortcut_action_camera" />
+    <java-symbol type="drawable" name="ic_shortcut_action_expanded_desktop" />
+    <java-symbol type="drawable" name="ic_shortcut_action_home" />
+    <java-symbol type="drawable" name="ic_shortcut_action_ime_switcher" />
+    <java-symbol type="drawable" name="ic_shortcut_action_killtask" />
+    <java-symbol type="drawable" name="ic_shortcut_action_lastapp" />
+    <java-symbol type="drawable" name="ic_shortcut_action_menu_big" />
+    <java-symbol type="drawable" name="ic_shortcut_action_navbar" />
+    <java-symbol type="drawable" name="ic_shortcut_action_notifications" />
+    <java-symbol type="drawable" name="ic_shortcut_action_null" />
+    <java-symbol type="drawable" name="ic_shortcut_action_pie" />
+    <java-symbol type="drawable" name="ic_shortcut_action_power" />
+    <java-symbol type="drawable" name="ic_shortcut_action_power_menu" />
+    <java-symbol type="drawable" name="ic_shortcut_action_quicksettings" />
+    <java-symbol type="drawable" name="ic_shortcut_action_recent" />
+    <java-symbol type="drawable" name="ic_shortcut_action_ring_vib_silent" />
+    <java-symbol type="drawable" name="ic_shortcut_action_screenshot" />
+    <java-symbol type="drawable" name="ic_shortcut_action_search" />
+    <java-symbol type="drawable" name="ic_shortcut_action_silent" />
+    <java-symbol type="drawable" name="ic_shortcut_action_theme_switch" />
+    <java-symbol type="drawable" name="ic_shortcut_action_torch" />
+    <java-symbol type="drawable" name="ic_shortcut_action_vib" />
+    <java-symbol type="drawable" name="ic_shortcut_action_volume_panel" />
+    <java-symbol type="drawable" name="ic_shortcut_alarm" />
+    <java-symbol type="drawable" name="ic_shortcut_andy" />
+    <java-symbol type="drawable" name="ic_shortcut_battery" />
+    <java-symbol type="drawable" name="ic_shortcut_browser" />
+    <java-symbol type="drawable" name="ic_shortcut_calendar" />
+    <java-symbol type="drawable" name="ic_shortcut_camera" />
+    <java-symbol type="drawable" name="ic_shortcut_cloud" />
+    <java-symbol type="drawable" name="ic_shortcut_contact" />
+    <java-symbol type="drawable" name="ic_shortcut_directdial" />
+    <java-symbol type="drawable" name="ic_shortcut_directmessage" />
+    <java-symbol type="drawable" name="ic_shortcut_drive" />
+    <java-symbol type="drawable" name="ic_shortcut_dropbox" />
+    <java-symbol type="drawable" name="ic_shortcut_email" />
+    <java-symbol type="drawable" name="ic_shortcut_email2" />
+    <java-symbol type="drawable" name="ic_shortcut_evernote" />
+    <java-symbol type="drawable" name="ic_shortcut_facebook" />
+    <java-symbol type="drawable" name="ic_shortcut_favorite" />
+    <java-symbol type="drawable" name="ic_shortcut_file_browser" />
+    <java-symbol type="drawable" name="ic_shortcut_file_browser2" />
+    <java-symbol type="drawable" name="ic_shortcut_fitness" />
+    <java-symbol type="drawable" name="ic_shortcut_gallery" />
+    <java-symbol type="drawable" name="ic_shortcut_gear" />
+    <java-symbol type="drawable" name="ic_shortcut_google_small" />
+    <java-symbol type="drawable" name="ic_shortcut_gplus" />
+    <java-symbol type="drawable" name="ic_shortcut_gtalk" />
+    <java-symbol type="drawable" name="ic_shortcut_help" />
+    <java-symbol type="drawable" name="ic_shortcut_joystick" />
+    <java-symbol type="drawable" name="ic_shortcut_key" />
+    <java-symbol type="drawable" name="ic_shortcut_laptop" />
+    <java-symbol type="drawable" name="ic_shortcut_luggage" />
+    <java-symbol type="drawable" name="ic_shortcut_maps" />
+    <java-symbol type="drawable" name="ic_shortcut_market" />
+    <java-symbol type="drawable" name="ic_shortcut_movie" />
+    <java-symbol type="drawable" name="ic_shortcut_music" />
+    <java-symbol type="drawable" name="ic_shortcut_nav" />
+    <java-symbol type="drawable" name="ic_shortcut_notes" />
+    <java-symbol type="drawable" name="ic_shortcut_package" />
+    <java-symbol type="drawable" name="ic_shortcut_phone" />
+    <java-symbol type="drawable" name="ic_shortcut_pinterest" />
+    <java-symbol type="drawable" name="ic_shortcut_play" />
+    <java-symbol type="drawable" name="ic_shortcut_pocket" />
+    <java-symbol type="drawable" name="ic_shortcut_quicksettings" />
+    <java-symbol type="drawable" name="ic_shortcut_rss" />
+    <java-symbol type="drawable" name="ic_shortcut_sdcard" />
+    <java-symbol type="drawable" name="ic_shortcut_search" />
+    <java-symbol type="drawable" name="ic_shortcut_sms" />
+    <java-symbol type="drawable" name="ic_shortcut_tasks" />
+    <java-symbol type="drawable" name="ic_shortcut_terminal" />
+    <java-symbol type="drawable" name="ic_shortcut_transit" />
+    <java-symbol type="drawable" name="ic_shortcut_tv" />
+    <java-symbol type="drawable" name="ic_shortcut_twitter" />
+    <java-symbol type="drawable" name="ic_shortcut_unlock" />
+    <java-symbol type="drawable" name="ic_sysbar_back" />
+    <java-symbol type="drawable" name="ic_sysbar_camera" />
+    <java-symbol type="drawable" name="ic_sysbar_expanded_desktop" />
+    <java-symbol type="drawable" name="ic_sysbar_home" />
+    <java-symbol type="drawable" name="ic_sysbar_ime_switcher" />
+    <java-symbol type="drawable" name="ic_sysbar_killtask" />
+    <java-symbol type="drawable" name="ic_sysbar_lastapp" />
+    <java-symbol type="drawable" name="ic_sysbar_menu" />
+    <java-symbol type="drawable" name="ic_sysbar_menu_big" />
+    <java-symbol type="drawable" name="ic_sysbar_notifications" />
+    <java-symbol type="drawable" name="ic_sysbar_null" />
+    <java-symbol type="drawable" name="ic_sysbar_power" />
+    <java-symbol type="drawable" name="ic_sysbar_power_menu" />
+    <java-symbol type="drawable" name="ic_sysbar_qs" />
+    <java-symbol type="drawable" name="ic_sysbar_recent" />
+    <java-symbol type="drawable" name="ic_sysbar_ring_vib_silent" />
+    <java-symbol type="drawable" name="ic_sysbar_screenshot" />
+    <java-symbol type="drawable" name="ic_sysbar_search" />
+    <java-symbol type="drawable" name="ic_sysbar_silent" />
+    <java-symbol type="drawable" name="ic_sysbar_torch" />
+    <java-symbol type="drawable" name="ic_sysbar_vib" />
 
     <!-- ShortcutPicker -->
     <java-symbol type="string" name="shortcuts_applications" />
