--- a/res/res/values/action_arrays.xml
+++ b/res/res/values/action_arrays.xml
@@ -208,45 +208,43 @@
 
     <!-- Slim Actions For Shortcuts -->
     <string-array name="shortcut_action_launcher_entries">
-        <item>@string/shortcut_action_home</item>
         <item>@string/shortcut_action_back</item>
-        <item>@string/shortcut_action_search</item>
-        <item>@string/shortcut_action_voice_search</item>
-        <item>@string/shortcut_action_menu</item>
-        <item>@string/shortcut_action_power</item>
-        <item>@string/shortcut_action_notifications</item>
-        <item>@string/shortcut_action_screenshot</item>
-        <item>@string/shortcut_action_ime</item>
-        <item>@string/shortcut_action_lastapp</item>
+        <item>@string/shortcut_action_home</item>
+        <item>@string/shortcut_action_recent</item>
+        <item>@string/shortcut_action_menu_big</item>
         <item>@string/shortcut_action_kill</item>
-        <item>@string/shortcut_action_assist</item>
-        <item>@string/shortcut_action_ring_vib</item>
-        <item>@string/shortcut_action_ring_silent</item>
-        <item>@string/shortcut_action_ring_vib_silent</item>
+        <item>@string/shortcut_action_lastapp</item>
+        <item>@string/shortcut_action_power</item>
         <item>@string/shortcut_action_power_menu</item>
-        <item>@string/shortcut_action_torch</item>
+        <item>@string/shortcut_action_notifications</item>
+        <item>@string/shortcut_action_qs</item>
+        <item>@string/shortcut_action_ime</item>
+        <item>@string/shortcut_action_screenshot</item>
         <item>@string/shortcut_action_camera</item>
+        <item>@string/shortcut_action_torch</item>
+        <item>@string/shortcut_action_nowontap</item>
+        <item>@string/shortcut_action_voice_search</item>
+        <item>@string/shortcut_action_none</item>
     </string-array>
 
     <string-array name="shortcut_action_launcher_values" translatable="false">
-        <item>**home**</item>
         <item>**back**</item>
-        <item>**search**</item>
-        <item>**voice_search**</item>
+        <item>**home**</item>
+        <item>**recents**</item>
         <item>**menu_big**</item>
-        <item>**power**</item>
-        <item>**notifications**</item>
-        <item>**screenshot**</item>
-        <item>**ime**</item>
-        <item>**lastapp**</item>
         <item>**kill**</item>
-        <item>**assist**</item>
-        <item>**ring_vib**</item>
-        <item>**ring_silent**</item>
-        <item>**ring_vib_silent**</item>
+        <item>**lastapp**</item>
+        <item>**power**</item>
         <item>**power_menu**</item>
-        <item>**torch**</item>
+        <item>**notifications**</item>
+        <item>**settings_panel**</item>
+        <item>**ime**</item>
+        <item>**screenshot**</item>
         <item>**camera**</item>
+        <item>**torch**</item>
+        <item>**nowontap**</item>
+        <item>**voice_search**</item>
+        <item>**null**</item>
     </string-array>
 
     <!-- Icon color options -->
