--- a/res/res/values/action_arrays.xml
+++ b/res/res/values/action_arrays.xml
@@ -206,6 +206,45 @@
         <item>**null**</item>
     </string-array>
 
+    <!-- HW Key Rebinding -->
+    <string-array name="shortcut_action_hwkey_entries">
+        <item>@string/shortcut_action_app</item>
+        <item>@string/shortcut_action_back</item>
+        <item>@string/shortcut_action_home</item>
+        <item>@string/shortcut_action_recent</item>
+        <item>@string/shortcut_action_menu_big</item>
+        <item>@string/shortcut_action_kill</item>
+        <item>@string/shortcut_action_lastapp</item>
+        <item>@string/shortcut_action_power</item>
+        <item>@string/shortcut_action_power_menu</item>
+        <item>@string/shortcut_action_ime</item>
+        <item>@string/shortcut_action_camera</item>
+        <item>@string/shortcut_action_screenshot</item>
+        <item>@string/shortcut_action_nowontap</item>
+        <item>@string/shortcut_action_voice_search</item>
+        <item>@string/shortcut_action_assist</item>
+        <item>@string/shortcut_action_none</item>
+    </string-array>
+
+    <string-array name="shortcut_action_hwkey_values" translatable="false">
+        <item>**app**</item>
+        <item>**back**</item>
+        <item>**home**</item>
+        <item>**recents**</item>
+        <item>**menu_big**</item>
+        <item>**kill**</item>
+        <item>**lastapp**</item>
+        <item>**power**</item>
+        <item>**power_menu**</item>
+        <item>**ime**</item>
+        <item>**camera**</item>
+        <item>**screenshot**</item>
+        <item>**nowontap**</item>
+        <item>**voice_search**</item>
+        <item>**search**</item>
+        <item>**null**</item>
+    </string-array>
+
     <!-- Slim Actions For Shortcuts -->
     <string-array name="shortcut_action_launcher_entries">
         <item>@string/shortcut_action_back</item>
