Add systemui tuner hooks, and fix icons
Change-Id: Ia6133f4412f2399a517646dcb7d6c322642dfecd

--- a/packages/SlimSettings/res/values/slim_strings.xml
+++ b/packages/SlimSettings/res/values/slim_strings.xml
@@ -26,6 +26,9 @@
     <string name="interface_settings_title">Interface</string>
     <string name="advanced_settings">Advanced</string>
 
+    <string name="quick_settings">Quick Settings</string>
+    <string name="status_bar_icons">Status bar icons</string>
+
     <!-- Navigation settings -->
     <string name="navigation_settings_options_title">Navigation options</string>
 
