--- a/packages/SlimSettings/res/xml/slim_interface_settings.xml
+++ b/packages/SlimSettings/res/xml/slim_interface_settings.xml
@@ -23,9 +23,19 @@
         android:key="status_bar"
         android:fragment="com.android.settings.slim.StatusBar"
         android:title="@string/status_bar_title" />
+
     <PreferenceScreen
         android:key="recent_panel"
         android:fragment="com.android.settings.slim.RecentPanel"
         android:title="@string/recent_panel_category" />
+
+    <PreferenceScreen
+        android:key="quick_settings"
+        android:title="@string/quick_settings">
+        <intent
+            android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.systemui"
+            android:targetClass="com.android.systemui.tuner.TunerActivity$QsTunerActivity" />
+    </PreferenceScreen>
 
 </PreferenceScreen>
