--- a/packages/SlimSettings/res/xml/status_bar_settings.xml
+++ b/packages/SlimSettings/res/xml/status_bar_settings.xml
@@ -19,6 +19,15 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/status_bar_title">
 
+    <PreferenceScreen
+        android:key="status_bar_icons"
+        android:title="@string/status_bar_icons">
+        <intent
+            android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.systemui"
+            android:targetClass="com.android.systemui.tuner.TunerActivity$StatusBarIcons" />
+    </PreferenceScreen>
+
     <PreferenceCategory
             android:title="@string/status_bar_style_title">
 
