Slim: Allow disabling HW Key lights
Also includes the below fix, ported from CM to the Slim framework:

Slim: Fix backlight illumination summary and timeout

This fixes the visual indicator of the button illumination summary after
trying to disable. Previously after setting the timeout to never, would
display a summary of "1", or with 5, it would end up displaying 6 after
applying the settings.

https://review.cyanogenmod.org/#/c/141905/
Ticket: CYNGNOS-2565
Signed-off-by: Roman Birg <roman@cyngn.com>
Signed-off-by: Dan Cartier <nospamdan1@gmail.com>

Change-Id: I5dcff16c9d2656579614ceb6574e91e6a31c9734
Signed-off-by: Dan Cartier <nospamdan1@gmail.com>
Signed-off-by: Griffin Millender <griffinn.millender@gmail.com>

--- a/packages/SlimSettings/res/xml/hardwarekeys_settings.xml
+++ b/packages/SlimSettings/res/xml/hardwarekeys_settings.xml
@@ -18,7 +18,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
         <PreferenceCategory
-                android:key="keys_cat"
+                android:key="button_keys"
                 android:title="@string/keys_bindings_title" >
 
             <SwitchPreference
@@ -26,7 +26,14 @@
                 android:title="@string/enable_hw_keys_title"
                 android:defaultValue="true" />
 
+            <com.android.settings.slim.ButtonBacklightBrightness
+                android:dependency="enable_hw_keys"
+                android:key="button_backlight"
+                android:title="@string/hardware_keys_lights_enable_title"
+                android:persistent="false" />
+
             <SwitchPreference
+                android:dependency="enable_hw_keys"
                 android:key="enable_hardware_rebind"
                 android:title="@string/keys_enable_custom_title"
                 android:summary="@string/keys_enable_custom_summary" />
