--- a/packages/SlimSettings/res/values/slim_strings.xml
+++ b/packages/SlimSettings/res/values/slim_strings.xml
@@ -283,6 +283,23 @@
     <string name="advanced_reboot_hide_on_keyguard">Hide on lock screen</string>
     <string name="advanced_reboot_show_always">Show always</string>
 
+    <!-- Hardware keys and lights -->
+    <string name="hardware_keys_enable_title">Enable hardware keys</string>
+    <string name="hardware_keys_enable_summary">Enable/disable hardware keys</string>
+    <string name="hardware_keys_lights_enable_title">Hardware key lights settings</string>
+
+    <!-- Key backlight -->
+    <string name="settings_reset_button">Reset</string>
+    <string name="button_backlight_enabled">Illuminate buttons</string>
+    <string name="keyboard_backlight_enabled">Illuminate keyboard</string>
+    <string name="button_backlight_seekbar_title">Button brightness</string>
+    <string name="keyboard_backlight_seekbar_title">Keyboard brightness</string>
+    <string name="backlight_timeout_title">Illumination timeout</string>
+    <string name="backlight_timeout_unlimited">Don\'t turn off</string>
+    <string name="backlight_summary_disabled">Disabled</string>
+    <string name="backlight_summary_enabled_with_timeout">Enabled for <xliff:g id="timeout">%s</xliff:g></string>
+    <string name="backlight_summary_enabled">Enabled</string>
+
     <!-- Hardware keys -->
     <string name="enable_hw_keys_title">Enable Hardware Buttons</string>
     <string name="button_keys_title">Hardware Buttons</string>
