--- a/res/res/values/config.xml
+++ b/res/res/values/config.xml
@@ -16,6 +16,19 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- Hardware "softkeys" present on the device, stored as a bit field.
+         This integer should equal the sum of the corresponding value for each
+         of the following keys present:
+            1 - Home
+            2 - Back
+            4 - Menu
+            8 - Assistant (search)
+           16 - App switch
+           32 - Camera
+        For example, a device with Home, Back and Menu keys would set this
+        config to 7. -->
+    <integer name="config_deviceHardwareKeys">0</integer>
+  
    <string name="config_externalSystemServer">org.slim.service.SlimSystemServer</string>
 
     <string-array name="config_externalSlimServices">
