--- a/res/res/values/symbols.xml
+++ b/res/res/values/symbols.xml
@@ -185,4 +185,7 @@
     <java-symbol type="anim" name="recent_screen_enter_left" />
     <java-symbol type="anim" name="recent_screen_fade_out" />
 
+    <!-- Hardware key rebinding -->
+    <java-symbol type="integer" name="config_deviceHardwareKeys" />
+
 </resources>
