--- a/res/res/values/symbols.xml
+++ b/res/res/values/symbols.xml
@@ -176,4 +176,13 @@
     <java-symbol type="id" name="doubletap_action_description" />
     <java-symbol type="id" name="list_item_icon" />
 
+    <!-- Slim recent app screen-->
+    <java-symbol type="integer" name="config_recentDefaultDur" />
+    <java-symbol type="integer" name="config_recentExitDur" />
+    <java-symbol type="style" name="Animation.RecentScreen" />
+    <java-symbol type="style" name="Animation.RecentScreen.Left" />
+    <java-symbol type="anim" name="recent_screen_enter" />
+    <java-symbol type="anim" name="recent_screen_enter_left" />
+    <java-symbol type="anim" name="recent_screen_fade_out" />
+
 </resources>
