--- a/packages/SlimSystemUI/res/values/colors.xml
+++ b/packages/SlimSystemUI/res/values/colors.xml
@@ -31,4 +31,7 @@
     <!-- Used by selector -->
     <color name="card_pressed">#7e3c3c3c</color>
 
+    <!-- Navigation bar -->
+    <color name="navigationbar_button_default_color">#FFFFFFFF</color>
+
 </resources>
