--- a/res/res/values/action_arrays.xml
+++ b/res/res/values/action_arrays.xml
@@ -132,13 +132,13 @@
         <item>@drawable/ic_shortcut_unlock</item>
     </string-array>
 
-    <!-- NavBar specific actions options -->
+    <!-- Slim actions options -->
     <string-array name="shortcut_action_entries">
         <item>@string/shortcut_action_app</item>
         <item>@string/shortcut_action_back</item>
         <item>@string/shortcut_action_home</item>
         <item>@string/shortcut_action_recent</item>
-        <item>@string/shortcut_action_menu_big</item>
+        <item>@string/shortcut_action_menu</item>
         <item>@string/shortcut_action_kill</item>
         <item>@string/shortcut_action_lastapp</item>
         <item>@string/shortcut_action_power</item>
@@ -149,9 +149,18 @@
         <item>@string/shortcut_action_screenshot</item>
         <item>@string/shortcut_action_camera</item>
         <item>@string/shortcut_action_torch</item>
+        <!--<item>@string/shortcut_action_theme_switch</item>-->
         <item>@string/shortcut_action_nowontap</item>
         <item>@string/shortcut_action_voice_search</item>
         <item>@string/shortcut_action_search</item>
+        <item>@string/shortcut_action_media_next</item>
+        <item>@string/shortcut_action_media_play_pause</item>
+        <item>@string/shortcut_action_media_previous</item>
+        <item>@string/shortcut_action_ring_silent</item>
+        <item>@string/shortcut_action_ring_vib</item>
+        <item>@string/shortcut_action_ring_vib_silent</item>
+        <item>@string/shortcut_action_wake_device</item>
+        <!--<item>@string/shortcut_action_nav_bar</item>-->
         <item>@string/shortcut_action_none</item>
     </string-array>
 
@@ -160,7 +169,7 @@
         <item>**back**</item>
         <item>**home**</item>
         <item>**recents**</item>
-        <item>**menu_big**</item>
+        <item>**menu**</item>
         <item>**kill**</item>
         <item>**lastapp**</item>
         <item>**power**</item>
@@ -171,118 +180,18 @@
         <item>**screenshot**</item>
         <item>**camera**</item>
         <item>**torch**</item>
+        <!--<item>**theme_switch**</item>-->
         <item>**nowontap**</item>
         <item>**voice_search**</item>
         <item>**search**</item>
-        <item>**null**</item>
-    </string-array>
-
-    <!-- Arrays for Screen off gestures -->
-    <string-array name="shortcut_action_screen_off_entries">
-        <item>@string/shortcut_action_app</item>
-        <item>@string/shortcut_action_camera</item>
-        <item>@string/shortcut_action_media_next</item>
-        <item>@string/shortcut_action_media_play_pause</item>
-        <item>@string/shortcut_action_media_previous</item>
-        <item>@string/shortcut_action_ring_silent</item>
-        <item>@string/shortcut_action_ring_vib</item>
-        <item>@string/shortcut_action_ring_vib_silent</item>
-        <item>@string/shortcut_action_torch</item>
-        <item>@string/shortcut_action_wake_device</item>
-        <item>@string/shortcut_action_none</item>
-    </string-array>
-
-    <string-array name="shortcut_action_screen_off_values" translatable="false">
-        <item>**app**</item>
-        <item>**camera**</item>
         <item>**media_next**</item>
         <item>**media_play_pause**</item>
         <item>**media_previous**</item>
         <item>**ring_silent**</item>
         <item>**ring_vib**</item>
         <item>**ring_vib_silent**</item>
-        <item>**torch**</item>
         <item>**wake_device**</item>
-        <item>**null**</item>
-    </string-array>
-
-    <!-- HW Key Rebinding -->
-    <string-array name="shortcut_action_hwkey_entries">
-        <item>@string/shortcut_action_app</item>
-        <item>@string/shortcut_action_back</item>
-        <item>@string/shortcut_action_home</item>
-        <item>@string/shortcut_action_recent</item>
-        <item>@string/shortcut_action_menu_big</item>
-        <item>@string/shortcut_action_kill</item>
-        <item>@string/shortcut_action_lastapp</item>
-        <item>@string/shortcut_action_power</item>
-        <item>@string/shortcut_action_power_menu</item>
-        <item>@string/shortcut_action_ime</item>
-        <item>@string/shortcut_action_camera</item>
-        <item>@string/shortcut_action_screenshot</item>
-        <item>@string/shortcut_action_nowontap</item>
-        <item>@string/shortcut_action_voice_search</item>
-        <item>@string/shortcut_action_assist</item>
-        <item>@string/shortcut_action_none</item>
-    </string-array>
-
-    <string-array name="shortcut_action_hwkey_values" translatable="false">
-        <item>**app**</item>
-        <item>**back**</item>
-        <item>**home**</item>
-        <item>**recents**</item>
-        <item>**menu_big**</item>
-        <item>**kill**</item>
-        <item>**lastapp**</item>
-        <item>**power**</item>
-        <item>**power_menu**</item>
-        <item>**ime**</item>
-        <item>**camera**</item>
-        <item>**screenshot**</item>
-        <item>**nowontap**</item>
-        <item>**voice_search**</item>
-        <item>**search**</item>
-        <item>**null**</item>
-    </string-array>
-
-    <!-- Slim Actions For Shortcuts -->
-    <string-array name="shortcut_action_launcher_entries">
-        <item>@string/shortcut_action_back</item>
-        <item>@string/shortcut_action_home</item>
-        <item>@string/shortcut_action_recent</item>
-        <item>@string/shortcut_action_menu_big</item>
-        <item>@string/shortcut_action_kill</item>
-        <item>@string/shortcut_action_lastapp</item>
-        <item>@string/shortcut_action_power</item>
-        <item>@string/shortcut_action_power_menu</item>
-        <item>@string/shortcut_action_notifications</item>
-        <item>@string/shortcut_action_qs</item>
-        <item>@string/shortcut_action_ime</item>
-        <item>@string/shortcut_action_screenshot</item>
-        <item>@string/shortcut_action_camera</item>
-        <item>@string/shortcut_action_torch</item>
-        <item>@string/shortcut_action_nowontap</item>
-        <item>@string/shortcut_action_voice_search</item>
-        <item>@string/shortcut_action_none</item>
-    </string-array>
-
-    <string-array name="shortcut_action_launcher_values" translatable="false">
-        <item>**back**</item>
-        <item>**home**</item>
-        <item>**recents**</item>
-        <item>**menu_big**</item>
-        <item>**kill**</item>
-        <item>**lastapp**</item>
-        <item>**power**</item>
-        <item>**power_menu**</item>
-        <item>**notifications**</item>
-        <item>**settings_panel**</item>
-        <item>**ime**</item>
-        <item>**screenshot**</item>
-        <item>**camera**</item>
-        <item>**torch**</item>
-        <item>**nowontap**</item>
-        <item>**voice_search**</item>
+        <!--<item>**nav_bar**</item>-->
         <item>**null**</item>
     </string-array>
 
