Add hw key disable switch (2/2)
Change-Id: I89d5bf1e789c016d45dcaf2762e5f345c2818071
Signed-off-by: Griffin Millender <griffinn.millender@gmail.com>

--- a/packages/SlimSettings/res/values/slim_strings.xml
+++ b/packages/SlimSettings/res/values/slim_strings.xml
@@ -284,6 +284,7 @@
     <string name="advanced_reboot_show_always">Show always</string>
 
     <!-- Hardware keys -->
+    <string name="enable_hw_keys_title">Enable Hardware Buttons</string>
     <string name="button_keys_title">Hardware Buttons</string>
     <string name="keys_bindings_title">Key actions</string>
     <string name="keys_enable_custom_title">Enable custom actions</string>
