--- a/packages/SlimSettings/res/xml/status_bar_settings.xml
+++ b/packages/SlimSettings/res/xml/status_bar_settings.xml
@@ -19,7 +19,7 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/status_bar_title">
 
-    <PreferenceScreen
+    <!--<PreferenceScreen
         android:key="status_bar_icons"
         android:title="@string/status_bar_icons">
         <intent
@@ -36,7 +36,7 @@
             android:key="clock_style_pref"
             android:title="@string/status_bar_clock" />
 
-    </PreferenceCategory>
+    </PreferenceCategory>-->
 
     <PreferenceCategory
             android:title="@string/battery_icon_options_title">
