--- a/packages/SlimSettings/res/layout/button_backlight.xml
+++ b/packages/SlimSettings/res/layout/button_backlight.xml
@@ -86,7 +86,7 @@
             android:layout_alignParentEnd="true"
             android:paddingStart="10dip"
             android:paddingEnd="10dip" />
-        <com.android.settings.slim.BacklightTimeoutSeekBar
+        <com.slim.settings.widget.BacklightTimeoutSeekBar
             android:id="@+id/timeout_seekbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
