--- a/packages/SlimSettings/res/xml/hardwarekeys_settings.xml
+++ b/packages/SlimSettings/res/xml/hardwarekeys_settings.xml
@@ -26,7 +26,7 @@
                 android:title="@string/enable_hw_keys_title"
                 android:defaultValue="true" />
 
-            <com.android.settings.slim.ButtonBacklightBrightness
+            <com.slim.settings.preference.ButtonBacklightBrightness
                 android:dependency="enable_hw_keys"
                 android:key="button_backlight"
                 android:title="@string/hardware_keys_lights_enable_title"
