--- a/packages/SlimSettings/res/xml/slim_interface_settings.xml
+++ b/packages/SlimSettings/res/xml/slim_interface_settings.xml
@@ -21,12 +21,12 @@
 
     <PreferenceScreen
         android:key="status_bar"
-        android:fragment="com.android.settings.slim.StatusBar"
+        android:fragment="com.slim.settings.fragments.StatusBar"
         android:title="@string/status_bar_title" />
 
     <PreferenceScreen
         android:key="recent_panel"
-        android:fragment="com.android.settings.slim.RecentPanel"
+        android:fragment="com.slim.settings.fragments.RecentPanel"
         android:title="@string/recent_panel_category" />
 
 </PreferenceScreen>
