--- a/packages/SlimSettings/res/xml/slim_navigation_settings.xml
+++ b/packages/SlimSettings/res/xml/slim_navigation_settings.xml
@@ -18,12 +18,12 @@
 
     <PreferenceScreen
         android:key="navbar_settings"
-        android:fragment="com.android.settings.slim.NavbarSettings"
+        android:fragment="com.slim.settings.fragments.NavbarSettings"
         android:title="@string/navigation_bar" />
 
     <PreferenceScreen
         android:key="hardwarekeys_settings"
-        android:fragment="com.android.settings.slim.HardwareKeysSettings"
+        android:fragment="com.slim.settings.fragments.HardwareKeysSettings"
         android:title="@string/button_keys_title" />
 
     <!-- DeviceHandler device specific screen off gesture settings -->
