Start to optimize SlimRecents
Change-Id: I24b8721807a16a4f01466176feea159a6f17fef2

--- a/packages/SlimSystemUI/res/layout/slim_recent.xml
+++ b/packages/SlimSystemUI/res/layout/slim_recent.xml
@@ -34,7 +34,7 @@
         android:orientation="vertical"
         android:gravity="center" >
 
-        <com.android.cards.view.CardListView
+        <com.android.cards.recyclerview.view.CardRecyclerView
             android:id="@+id/recent_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
