--- a/packages/SlimSystemUI/res/layout/recent_base_card_layout.xml
+++ b/packages/SlimSystemUI/res/layout/recent_base_card_layout.xml
@@ -24,6 +24,11 @@
     android:layout_height="wrap_content">
 
     <!-- Card visible layout -->
+    <FrameLayout
+        android:id="@+id/card_reveal_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:id="@+id/card_main_layout"
         style="@style/card.main_layout"
@@ -53,6 +58,48 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:visibility="gone"
+        android:orientation="horizontal"
+        android:id="@+id/card_options"
+        android:paddingBottom="4dp"
+        android:paddingTop="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffff0000">
+
+        <ImageView
+            android:id="@+id/app_info"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_info" />
+
+        <ImageView
+            android:id="@+id/market"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_shop" />
+
+        <ImageView
+            android:id="@+id/multiwindow"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_sysbar_docked" />
+
+        <ImageView
+            android:id="@+id/close"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_done" />
+
+    </LinearLayout>
+
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/card_content_expand_layout"
