--- a/packages/SlimSettings/res/xml/navbar_settings.xml
+++ b/packages/SlimSettings/res/xml/navbar_settings.xml
@@ -17,13 +17,14 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <SwitchPreference
-                android:key="enable_nav_bar"
+        <org.slim.preference.SlimSwitchPreference
+                android:key="navigation_bar_show"
                 android:title="@string/navbar_enable_bar"
                 android:summary="@string/navbar_enable_bar_summary" />
 
         <PreferenceCategory
                 android:key="navbar_cat"
+                android:dependency="navigation_bar_show"
                 android:title="@string/navbar_cat" >
 
             <PreferenceScreen
@@ -53,6 +54,7 @@
 
         <PreferenceCategory
                 android:key="advanced_cat"
+                android:dependency="navigation_bar_show"
                 android:title="@string/advanced_settings">
 
             <ListPreference
@@ -69,8 +71,8 @@
                     android:title="@string/title_pref_menu_location"
                     android:summary="@string/summary_pref_menu_location" />
 
-            <SwitchPreference
-                    android:key="navbar_can_move"
+            <org.slim.preference.SlimSwitchPreference
+                    android:key="navigation_bar_can_move"
                     android:title="@string/navbar_can_move"
                     android:summary="@string/navbar_can_move_summary" />
 
@@ -78,14 +80,15 @@
 
         <PreferenceCategory
                 android:key="dim_nav_buttons_cat"
+                android:dependency="navigation_bar_show"
                 android:title="@string/dim_nav_buttons_category">
 
-            <SwitchPreference
+            <org.slim.preference.SlimSwitchPreference
                     android:key="dim_nav_buttons"
                     android:title="@string/dim_nav_buttons_title"
                     android:summary="@string/dim_nav_buttons_summary" />
 
-            <SwitchPreference
+            <org.slim.preference.SlimSwitchPreference
                     android:key="dim_nav_buttons_touch_anywhere"
                     android:dependency="dim_nav_buttons"
                     android:title="@string/dim_nav_buttons_touch_anywhere_title"
@@ -104,7 +107,7 @@
                     android:title="@string/dim_nav_buttons_alpha_title"
                     android:summary="@string/dim_nav_buttons_alpha_summary" />
 
-            <SwitchPreference
+            <org.slim.preference.SlimSwitchPreference
                     android:key="dim_nav_buttons_animate"
                     android:dependency="dim_nav_buttons"
                     android:title="@string/dim_nav_buttons_animate_title"
