--- a/res/res/values/attrs.xml
+++ b/res/res/values/attrs.xml
@@ -49,9 +49,9 @@
 
     <declare-styleable name="SlimPreference">
         <attr name="slimSettingType">
-            <flag name="system" value="0" />
-            <flag name="global" value="1" />
-            <flag name="secure" value="2" />
+            <enum name="system" value="0" />
+            <enum name="global" value="1" />
+            <enum name="secure" value="2" />
         </attr>
     </declare-styleable>
 
