--- a/packages/SlimSettings/res/xml/recent_panel_settings.xml
+++ b/packages/SlimSettings/res/xml/recent_panel_settings.xml
@@ -16,6 +16,7 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+        xmlns:slim="http://schemas.android.com/apk/res/org.slim.framework"
         android:title="@string/recent_panel_category">
 
         <org.slim.preference.SlimSwitchPreference
@@ -29,8 +30,10 @@
             android:defaultValue="false" />
 
         <org.slim.preference.SlimSeekBarPreference
-            android:key="max_apps"
-            android:title="@string/recents_max_apps_title" />
+            android:key="recents_max_apps"
+            android:title="@string/recents_max_apps_title"
+            slim:minValue="5"
+            slim:usePercentage="false" />
 
         <org.slim.preference.SlimListPreference
             android:dependency="use_slim_recents"
@@ -55,7 +58,10 @@
 
         <org.slim.preference.SlimSeekBarPreference
             android:key="recent_panel_scale"
-            android:title="@string/recent_panel_scale_title" />
+            android:title="@string/recent_panel_scale_title"
+            slim:interval="5"
+            slim:defaultValue="100"
+            slim:minValue="60" />
 
         <org.slim.preference.colorpicker.ColorPickerPreference
             android:dependency="use_slim_recents"
